# icocp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common_definitions.cmake
proj/: generate_vs2022.bat
src/extlib/stb/: CMakeLists.txt  stb_lib.c
src/icocp_app/: CMakeLists.txt  icocp.c  icocp.h  main.c
